fix: prevent layout shift caused by scrollbar

--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -5,7 +5,7 @@
   z-index: 10;
   top: 0;
 
-  width: 100%;
+  width: 100vw;
   border-bottom: 1px solid var(--mui-palette-primary-main);
 
   background-color: transparent;
