--- a/src/pages/login-page/login-page.module.scss
+++ b/src/pages/login-page/login-page.module.scss
@@ -1,26 +1,27 @@
+@use '../../styles/mixins' as *;
+
 .login-bg {
-  position: relative;
+  position: fixed;
+  z-index: -1;
+  inset: 0;
 
-  display: flex;
-  flex-direction: column;
-
-  width: 100%;
+  width: 100vw;
   min-height: 100dvh;
-  padding: var(--spacing-2);
+  padding: var(--spacing-8) var(--spacing-2);
 
   background-image: url('/images/login-bg.webp');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+
+  @include flex(column);
 }
 
 .form-wrapper {
-  overflow-y: auto;
-
   width: 38%;
   min-width: 280px;
   max-width: 500px;
-  margin: auto;
+  margin: var(--spacing-8) auto;
   padding: var(--spacing-7);
   border-radius: var(--spacing-1);
 
@@ -29,8 +30,4 @@
   & h2 {
     margin-bottom: var(--spacing-3);
   }
-}
-
-.temp {
-  min-height: 100dvh;
 }
